Microservices/YAMLs/music.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-deployment
spec:
  selector:
    matchLabels:
      app: music
  template:
    metadata:
      labels:
        app: music
    spec:
      containers:
      - name: music
        image: gcr.io/duosound/music:latest
        ports:
        - containerPort: 2001
---
apiVersion: v1
kind: Service
metadata:
  name: music-service
spec:
  type: NodePort
  selector:
    app: music
  ports:
  - port: 2001
    targetPort: 2001
