Microservices/YAMLs/userdata.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userdata-deployment
spec:
  selector:
    matchLabels:
      app: userdata
  template:
    metadata:
      labels:
        app: userdata
    spec:
      containers:
      - name: userdata
        image: gcr.io/duosound/userdata:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: userdata-service
spec:
  type: NodePort
  selector:
    app: userdata
  ports:
  - port: 8080
    targetPort: 8080
